fix: cut off dropped choices that stretches over the drop area (image)

--- a/components/corespring/graphic-gap-match/src/client/styles.less
+++ b/components/corespring/graphic-gap-match/src/client/styles.less
@@ -41,10 +41,12 @@
     margin: 1px;
     position: relative;
     vertical-align: top;
+    overflow: hidden;
 
     &.dropping {
       border: 2px dashed #CCCCCC;
       margin: 0;
+      overflow: visible;
     }
 
     &.warning {
